--- a/frontend/src/components/Form.css
+++ b/frontend/src/components/Form.css
@@ -1,9 +1,9 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   height: 100vh;
   margin: 0;
 }
@@ -16,6 +16,7 @@ body {
   width: 100%;
   max-width: 500px;
   box-sizing: border-box; 
+  margin: 5% auto;
 }
 
 label {
